--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -144,10 +144,10 @@
 \header{Certifications}
 \begin{itemize}
     \item Applied Text Mining in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill Dec 2022
-    \item Applied Machine Learning in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill Nov 2022
-    \item Applied Plotting, Charting \& Data Representation in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill Oct 2022
-    \item Introduction to Data Science in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/UHKNPYG352ZU}{UHKNPYG352ZU}) \hfill Sep 2022
-    \item Introduction to SQL - \emph{Coursera} (\href{https://coursera.org/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
+    \item Applied Machine Learning in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill Nov 2022
+    \item Applied Plotting, Charting \& Data Representation in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill Oct 2022
+    \item Introduction to Data Science in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU}{UHKNPYG352ZU}) \hfill Sep 2022
+    \item Introduction to SQL - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
 \end{itemize}
 \vspace{1mm}
 %==== Professional and Academic Development ====%
