--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -21,6 +21,9 @@
 \raggedright
 \usepackage{inconsolata}
 
+\usepackage{marvosym}
+\usepackage{fontawesome}
+\usepackage{twemojis}
 
 \def\bull{\vrule height 0.8ex width .7ex depth -.1ex }
 
@@ -80,42 +83,42 @@
 \vspace*{-10pt}
 \begin{center}
     {\Huge\textbf\textsc{{{Don Lim}}}}\\
-    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{donlim93.github.io} \\
+    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} | \Mobilefone\space (806) 317-7937 | \href{https://donlim93.github.io/}{\twemoji{globe with meridians}\space donlim93.github.io} \\
 \end{center}
 %==== Experience ====%
 
 \header{Work and Research Experience}
-\textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
+\textbf{Green Brick Partners, Inc.} \hfill \faMapMarker\space Plano, TX \\
 \textit{Sales and Marketing Analyst} \hfill May 2023 --- Present \\
 
-\textbf{DocuNav Solutions} \hfill Frisco, TX \\
+\textbf{DocuNav Solutions} \hfill \faMapMarker\space Frisco, TX \\
 \textit{Support Engineer} \hfill June 2022 --- May 2023 \\
 \begin{itemize}
     \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; administering folder-, document-, and user-level security; internal IT support
 \end{itemize}    
 
-\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
+\textbf{Free Market Institute, Texas Tech University} \hfill \faMapMarker\space Lubbock, TX\\
 \textit{Economic Research Assistant} \hfill Aug 2020 --- May 2022 \\
 \begin{itemize}
     \item Edited and revised book chapters and journal articles; compiled relevant literature for publications
 \end{itemize}
 
-\textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
+\textbf{American Institute for Economic Research} \hfill \faMapMarker\space Great Barrington, MA\\
 \textit{E.C. Harwood Visiting Research Fellow} \hfill Dec 2018 --- May 2019\\
 
-\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
+\textbf{Free Market Institute, Texas Tech University} \hfill \faMapMarker\space Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
 \begin{itemize}
     \item Researched master's thesis: economic analysis of open-source communities
 \end{itemize}
 
-\textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
+\textbf{Commonwealth Foundation} \hfill \faMapMarker\space King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
 \begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies; wrote and edited two publications per week related to the Pennsylvania's budget and education policy; responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 
-\textbf{Cato Institute} \hfill Washington, D.C.\\
+\textbf{Cato Institute} \hfill \faMapMarker\space Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
 \begin{itemize}
     \item Collected and analyzed datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policy; produced over 200 social media posts 
@@ -124,19 +127,19 @@
 
 %==== Education ====%
 \header{Education}
-\textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
+\textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill \faMapMarker\space Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics}; 3.595 GPA \hfill May 2022 \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
 
-\textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
+\textbf{CEVRO Institute School of Political Studies}\hfill \faMapMarker\space Prague, Czech Republic\\
 \textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill Jun 2019\\
 \begin{itemize}
     \item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
 \end{itemize}
 
-\textbf{University of Michigan College of Literature, Science, and the Arts}\hfill Ann Arbor, MI\\
+\textbf{University of Michigan College of Literature, Science, and the Arts}\hfill \faMapMarker\space Ann Arbor, MI\\
 \textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill Apr 2016\\
 
 \vspace{1mm}
@@ -153,17 +156,17 @@
 %==== Professional and Academic Development ====%
 \header{Professional and Academic Development}
 
-NOUS Young Affiliates Program \hfill Online | Oct 2020 --- May 2022 \\
+NOUS Young Affiliates Program \hfill \faMapMarker\space Online | Oct 2020 --- May 2022 \\
 
-State Policy Network Generation Liberty Fellow \hfill Colorado Springs, CO | Oct 2019 \\
+State Policy Network Generation Liberty Fellow \hfill \faMapMarker\space Colorado Springs, CO | Oct 2019 \\
 
-Epistemological and Methodological Approaches in Science \hfill Tallahassee, FL | Aug 2018\\
+Epistemological and Methodological Approaches in Science \hfill \faMapMarker\space Tallahassee, FL | Aug 2018\\
 
-Friedrich-Naumann-Stiftung f\"{u}r die Freiheit Seminar \hfill Gummersbach, Germany | Jul 2018 \\
+Friedrich-Naumann-Stiftung f\"{u}r die Freiheit Seminar \hfill \faMapMarker\space Gummersbach, Germany | Jul 2018 \\
 
-European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \\
+European Journalism Institute Program \hfill \faMapMarker\space Prague, Czech Republic | Jul 2018 \\
 
-Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill Online | Jan 2016 --- May 2017
+Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill \faMapMarker\space Online | Jan 2016 --- May 2017
 
 \vspace{1mm}
 %==== Skills ====%
