--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -89,37 +89,37 @@
 
 \header{Work and Research Experience}
 \textbf{Green Brick Partners, Inc.} \hfill \faMapMarker\space Plano, TX \\
-\textit{Sales and Marketing Analyst} \hfill \faCalendar\space May 2023 --- Present \\
+\textit{Sales and Marketing Analyst} \hfill  \emph{May 2023 --- Present} \\
 
 \textbf{DocuNav Solutions} \hfill \faMapMarker\space Frisco, TX \\
-\textit{Support Engineer} \hfill \faCalendar\space June 2022 --- May 2023 \\
+\textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; administering folder-, document-, and user-level security; internal IT support
 \end{itemize}    
 
 \textbf{Free Market Institute, Texas Tech University} \hfill \faMapMarker\space Lubbock, TX\\
-\textit{Economic Research Assistant} \hfill \faCalendar\space Aug 2020 --- May 2022 \\
+\textit{Economic Research Assistant} \hfill  \emph{Aug 2020 --- May 2022} \\
 \begin{itemize}
     \item Edited and revised book chapters and journal articles; compiled relevant literature for publications
 \end{itemize}
 
 \textbf{American Institute for Economic Research} \hfill \faMapMarker\space Great Barrington, MA\\
-\textit{E.C. Harwood Visiting Research Fellow} \hfill \faCalendar\space Dec 2018 --- May 2019\\
+\textit{E.C. Harwood Visiting Research Fellow} \hfill  \emph{Dec 2018 --- May 2019}\\
 
 \textbf{Free Market Institute, Texas Tech University} \hfill \faMapMarker\space Lubbock, TX\\
-\textit{Visiting Research Scholar} \hfill \faCalendar\space Sep 2018 --- Dec 2018\\
+\textit{Visiting Research Scholar} \hfill  \emph{Sep 2018 --- Dec 2018}\\
 \begin{itemize}
     \item Researched master's thesis: economic analysis of open-source communities
 \end{itemize}
 
 \textbf{Commonwealth Foundation} \hfill \faMapMarker\space King of Prussia, PA\\
-\textit{Research Fellow} \hfill \faCalendar\space Jan 2017 --- May 2017\\
+\textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
 \begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies; wrote and edited two publications per week related to the Pennsylvania's budget and education policy; responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 
 \textbf{Cato Institute} \hfill \faMapMarker\space Washington, D.C.\\
-\textit{Intern Researcher at the Center for Educational Freedom} \hfill \faCalendar\space Sep 2016 --- Dec 2016\\
+\textit{Intern Researcher at the Center for Educational Freedom} \hfill  \emph{Sep 2016 --- Dec 2016}\\
 \begin{itemize}
     \item Collected and analyzed datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policy; produced over 200 social media posts 
 \end{itemize}
@@ -128,45 +128,46 @@
 %==== Education ====%
 \header{Education}
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill \faMapMarker\space Lubbock, Texas\\
-\textit{M.S. Agricultural and Applied Economics}; 3.595 GPA \hfill \faCalendar\space May 2022 \\
+\textit{M.S. Agricultural and Applied Economics}; 3.595 GPA \hfill  \emph{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
 
 \textbf{CEVRO Institute School of Political Studies}\hfill \faMapMarker\space Prague, Czech Republic\\
-\textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill \faCalendar\space Jun 2019\\
+\textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
 \begin{itemize}
     \item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
 \end{itemize}
 
 \textbf{University of Michigan College of Literature, Science, and the Arts}\hfill \faMapMarker\space Ann Arbor, MI\\
-\textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill \faCalendar\space Apr 2016\\
+\textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
 
 \vspace{1mm}
 %==== Certificates ====%
 \header{Certifications}
 \begin{itemize}
-    \item Applied Text Mining in Python (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill \faCalendar\space Dec 2022
-    \item Applied Machine Learning in Python (\href{https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill \faCalendar\space Nov 2022
-    \item Applied Plotting, Charting \& Data Representation in Python (\href{https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill \faCalendar\space Oct 2022
-    \item Introduction to Data Science in Python (\href{https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU}{UHKNPYG352ZU}) \hfill \faCalendar\space Sep 2022
-    \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill \faCalendar\space Dec 2021
+    \item Applied Text Mining in Python (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill  \emph{Dec 2022}
+    \item Applied Machine Learning in Python (\href{https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill  \emph{Nov 2022}
+    \item Applied Plotting, Charting \& Data Representation in Python (\href{https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill
+    \emph{Oct 2022}
+    \item Introduction to Data Science in Python (\href{https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU}{UHKNPYG352ZU}) \hfill  \emph{Sep 2022}
+    \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
 \end{itemize}
 \vspace{1mm}
 %==== Professional and Academic Development ====%
 \header{Professional and Academic Development}
 
-NOUS Young Affiliates Program \hfill \faMapMarker\space Online | \faCalendar\space Oct 2020 --- May 2022 \\
+NOUS Young Affiliates Program \hfill \faMapMarker\space Online |  \emph{Oct 2020 --- May 2022} \\
 
-State Policy Network Generation Liberty Fellow \hfill \faMapMarker\space Colorado Springs, CO | \faCalendar\space Oct 2019 \\
+State Policy Network Generation Liberty Fellow \hfill \faMapMarker\space Colorado Springs, CO |  \emph{Oct 2019} \\
 
-Epistemological and Methodological Approaches in Science \hfill \faMapMarker\space Tallahassee, FL | \faCalendar\space Aug 2018\\
+Epistemological and Methodological Approaches in Science \hfill \faMapMarker\space Tallahassee, FL |  \emph{Aug 2018} \\
 
-Friedrich-Naumann-Stiftung f\"{u}r die Freiheit Seminar \hfill \faMapMarker\space Gummersbach, Germany | \faCalendar\space Jul 2018 \\
+Friedrich-Naumann-Stiftung f\"{u}r die Freiheit Seminar \hfill \faMapMarker\space Gummersbach, Germany |  \emph{Jul 2018} \\
 
-European Journalism Institute Program \hfill \faMapMarker\space Prague, Czech Republic | \faCalendar\space Jul 2018 \\
+European Journalism Institute Program \hfill \faMapMarker\space Prague, Czech Republic |  \emph{Jul 2018} \\
 
-Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill \faMapMarker\space Online | \faCalendar\space Jan 2016 --- May 2017
+Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill \faMapMarker\space Online |  \emph{Jan 2016 --- May 2017}
 
 \vspace{1mm}
 %==== Skills ====%
