--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -146,6 +146,7 @@
 %==== Certificates ====%
 \header{Certifications}
 \begin{itemize}
+    \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill \emph{Jul 2023}
     \item Applied Text Mining in Python (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill  \emph{Dec 2022}
     \item Applied Machine Learning in Python (\href{https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill  \emph{Nov 2022}
     \item Applied Plotting, Charting \& Data Representation in Python (\href{https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill
