--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -25,7 +25,13 @@
 \usepackage{fontawesome}
 \usepackage{twemojis}
 
+\usepackage[explicit]{titlesec}
+\usepackage{xhfill}
+
 \def\bull{\vrule height 0.8ex width .7ex depth -.1ex }
+
+\renewcommand{\hrulefill}{%
+  \leavevmode\leaders\hrule height 0.3pt\hfill\kern0pt }
 
 \newcommand{\area} [2] {
     \vspace*{-9pt}
@@ -40,8 +46,9 @@
 }
 
 \newcommand{\header} [1] {
-    {\hspace*{-18pt}\vspace*{6pt} \textsc{\large{#1}}}
-    \vspace*{-6pt} \lineunder
+    \vspace*{2pt}
+    {\textsc{\large{\xrfill[0.1ex]{0.5pt}~#1~\xrfill[0.1ex]{0.5pt}}}}
+    \vspace*{2pt}
 }
 
 \newcommand{\employer} [3] {
@@ -87,64 +94,64 @@
 \end{center}
 %==== Experience ====%
 
-\header{Work and Research Experience}
-\textbf{Green Brick Partners, Inc.} \hfill \faMapMarker\space Plano, TX \\
+\header{Work and Research Experience} \\
+\textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Sales and Marketing Analyst} \hfill  \emph{May 2023 --- Present} \\
 
-\textbf{DocuNav Solutions} \hfill \faMapMarker\space Frisco, TX \\
+\textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; administering folder-, document-, and user-level security; internal IT support
 \end{itemize}    
 
-\textbf{Free Market Institute, Texas Tech University} \hfill \faMapMarker\space Lubbock, TX\\
+\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Economic Research Assistant} \hfill  \emph{Aug 2020 --- May 2022} \\
 \begin{itemize}
     \item Edited and revised book chapters and journal articles; compiled relevant literature for publications
 \end{itemize}
 
-\textbf{American Institute for Economic Research} \hfill \faMapMarker\space Great Barrington, MA\\
+\textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
 \textit{E.C. Harwood Visiting Research Fellow} \hfill  \emph{Dec 2018 --- May 2019}\\
 
-\textbf{Free Market Institute, Texas Tech University} \hfill \faMapMarker\space Lubbock, TX\\
+\textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill  \emph{Sep 2018 --- Dec 2018}\\
 \begin{itemize}
     \item Researched master's thesis: economic analysis of open-source communities
 \end{itemize}
 
-\textbf{Commonwealth Foundation} \hfill \faMapMarker\space King of Prussia, PA\\
+\textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
 \begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies; wrote and edited two publications per week related to the Pennsylvania's budget and education policy; responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 
-\textbf{Cato Institute} \hfill \faMapMarker\space Washington, D.C.\\
-\textit{Intern Researcher at the Center for Educational Freedom} \hfill  \emph{Sep 2016 --- Dec 2016}\\
+\textbf{Cato Institute} \hfill Washington, D.C.\\
+\textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
 \begin{itemize}
     \item Collected and analyzed datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policy; produced over 200 social media posts 
 \end{itemize}
 \vspace{1mm}
 
 %==== Education ====%
-\header{Education}
-\textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill \faMapMarker\space Lubbock, Texas\\
+\header{Education} \\
+\textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics}; 3.595 GPA \hfill  \emph{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
 
-\textbf{CEVRO Institute School of Political Studies}\hfill \faMapMarker\space Prague, Czech Republic\\
+\textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
 \begin{itemize}
     \item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
 \end{itemize}
 
-\textbf{University of Michigan College of Literature, Science, and the Arts}\hfill \faMapMarker\space Ann Arbor, MI\\
+\textbf{University of Michigan College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
 \textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
 
 \vspace{1mm}
 %==== Certificates ====%
-\header{Certifications}
+\header{Certifications} \\
 \begin{itemize}
     \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill \emph{Jul 2023}
     \item Applied Text Mining in Python (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill  \emph{Dec 2022}
@@ -156,24 +163,24 @@
 \end{itemize}
 \vspace{1mm}
 %==== Professional and Academic Development ====%
-\header{Professional and Academic Development}
+\header{Professional and Academic Development} \\
 
-NOUS Young Affiliates Program \hfill \faMapMarker\space Online |  \emph{Oct 2020 --- May 2022} \\
+NOUS Young Affiliates Program \hfill Online |  \emph{Oct 2020 --- May 2022} \\
 
-State Policy Network Generation Liberty Fellow \hfill \faMapMarker\space Colorado Springs, CO |  \emph{Oct 2019} \\
+State Policy Network Generation Liberty Fellow \hfill Colorado Springs, CO |  \emph{Oct 2019} \\
 
-Epistemological and Methodological Approaches in Science \hfill \faMapMarker\space Tallahassee, FL |  \emph{Aug 2018} \\
+Epistemological and Methodological Approaches in Science \hfill Tallahassee, FL |  \emph{Aug 2018} \\
 
-Friedrich-Naumann-Stiftung f\"{u}r die Freiheit Seminar \hfill \faMapMarker\space Gummersbach, Germany |  \emph{Jul 2018} \\
+Friedrich-Naumann-Stiftung f\"{u}r die Freiheit Seminar \hfill Gummersbach, Germany |  \emph{Jul 2018} \\
 
-European Journalism Institute Program \hfill \faMapMarker\space Prague, Czech Republic |  \emph{Jul 2018} \\
+European Journalism Institute Program \hfill Prague, Czech Republic |  \emph{Jul 2018} \\
 
-Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill \faMapMarker\space Online |  \emph{Jan 2016 --- May 2017}
+Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill Online |  \emph{Jan 2016 --- May 2017}
 
 \vspace{1mm}
 %==== Skills ====%
-\header{Skills}
-Technical languages: Python (regex, numpy, pandas, scikit-learn, matplotlib, nltk, networkx), SAS, R (dplyr, tidyr, stringr, ggplot2), Stata, HTML5, CSS, \LaTeX, SQL \\
+\header{Skills} \\
+Technical languages: Python (regex, numpy, pandas, scikit-learn, matplotlib, nltk, networkx), R (dplyr, tidyr, stringr, ggplot2), HTML5, CSS, \LaTeX, SQL \\
 
 Statistical techniques: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit \\
 
