--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -15,7 +15,7 @@
 }
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[margin=0.9in]{geometry}
+\usepackage[margin=0.8in]{geometry}
 \textheight=10in
 \pagestyle{empty}
 \raggedright
@@ -46,9 +46,9 @@
 }
 
 \newcommand{\header} [1] {
-    \vspace*{2pt}
-    {\textsc{\large{\xrfill[0.1ex]{0.5pt}~#1~\xrfill[0.1ex]{0.5pt}}}}
-    \vspace*{2pt}
+    \vspace*{1mm}
+    {\textsc{\large{\xrfill[0.1ex]{0.5pt}~#1~\xrfill[0.1ex]{0.5pt}}}} % center and underline
+    \vspace*{1mm}
 }
 
 \newcommand{\employer} [3] {
@@ -87,7 +87,7 @@
 \fontsize{10.5}{12}\selectfont
 
 %==== Profile ====%
-\vspace*{-10pt}
+\vspace*{-3mm}
 \begin{center}
     {\Huge\textbf\textsc{{{Don Lim}}}}\\
     \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} | \Mobilefone\space (806) 317-7937 | \href{https://donlim93.github.io/}{\twemoji{globe with meridians}\space donlim93.github.io} \\
@@ -97,38 +97,47 @@
 \header{Work and Research Experience} \\
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Sales and Marketing Analyst} \hfill  \emph{May 2023 --- Present} \\
+\begin{itemize}
+    \item Assisting in implementing Salesforce production and development environments (Salesforce CRM, Marketing Cloud, Sales Cloud); querying existing data to validate and clean for migration into Salesforce (SQL, Python)
+\end{itemize}
+\vspace{1mm}
 
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; administering folder-, document-, and user-level security; internal IT support
 \end{itemize}    
+\vspace{1mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Economic Research Assistant} \hfill  \emph{Aug 2020 --- May 2022} \\
 \begin{itemize}
-    \item Edited and revised book chapters and journal articles; compiled relevant literature for publications
+    \item Edited and revised book chapters and journal articles; compiled relevant literature for journal articles
 \end{itemize}
+\vspace{1mm}
 
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
 \textit{E.C. Harwood Visiting Research Fellow} \hfill  \emph{Dec 2018 --- May 2019}\\
+\vspace{1mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill  \emph{Sep 2018 --- Dec 2018}\\
 \begin{itemize}
     \item Researched master's thesis: economic analysis of open-source communities
 \end{itemize}
+\vspace{1mm}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
 \begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies; wrote and edited two publications per week related to the Pennsylvania's budget and education policy; responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
+\vspace{1mm}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
 \begin{itemize}
-    \item Collected and analyzed datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policy; produced over 200 social media posts 
+    \item Collected and analyzed TIMSS and PISA datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education; produced over 200 social media posts 
 \end{itemize}
 \vspace{1mm}
 
@@ -153,12 +162,8 @@
 %==== Certificates ====%
 \header{Certifications} \\
 \begin{itemize}
-    \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill \emph{Jul 2023}
-    \item Applied Text Mining in Python (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill  \emph{Dec 2022}
-    \item Applied Machine Learning in Python (\href{https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill  \emph{Nov 2022}
-    \item Applied Plotting, Charting \& Data Representation in Python (\href{https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill
-    \emph{Oct 2022}
-    \item Introduction to Data Science in Python (\href{https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU}{UHKNPYG352ZU}) \hfill  \emph{Sep 2022}
+    \item \textbf{Specialization} (5 courses) - Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
+    \item \textbf{Specialization} (4 courses) - Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill \emph{Jul 2023}
     \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
 \end{itemize}
 \vspace{1mm}
