--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -93,53 +93,53 @@
     \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} | \Mobilefone\space (806) 317-7937 | \href{https://donlim93.github.io/}{\twemoji{globe with meridians}\space donlim93.github.io} \\
 \end{center}
 %==== Experience ====%
-
+\vspace*{-1mm}
 \header{Work and Research Experience} \\
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Sales and Marketing Analyst} \hfill  \emph{May 2023 --- Present} \\
 \begin{itemize}
     \item Assisting in implementing Salesforce production and development environments (Salesforce CRM, Marketing Cloud, Sales Cloud); querying existing data to validate and clean for migration into Salesforce (SQL, Python)
 \end{itemize}
-\vspace{1mm}
+\vspace{0.5mm}
 
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; administering folder-, document-, and user-level security; internal IT support
 \end{itemize}    
-\vspace{1mm}
+\vspace{0.5mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Economic Research Assistant} \hfill  \emph{Aug 2020 --- May 2022} \\
 \begin{itemize}
     \item Edited and revised book chapters and journal articles; compiled relevant literature for journal articles
 \end{itemize}
-\vspace{1mm}
+\vspace{0.5mm}
 
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
 \textit{E.C. Harwood Visiting Research Fellow} \hfill  \emph{Dec 2018 --- May 2019}\\
-\vspace{1mm}
+\vspace{0.5mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill  \emph{Sep 2018 --- Dec 2018}\\
 \begin{itemize}
     \item Researched master's thesis: economic analysis of open-source communities
 \end{itemize}
-\vspace{1mm}
+\vspace{0.5mm}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
 \begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies; wrote and edited two publications per week related to the Pennsylvania's budget and education policy; responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
-\vspace{1mm}
+\vspace{0.5mm}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
 \begin{itemize}
     \item Collected and analyzed TIMSS and PISA datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education; produced over 200 social media posts 
 \end{itemize}
-\vspace{1mm}
+\vspace{0.5mm}
 
 %==== Education ====%
 \header{Education} \\
@@ -148,25 +148,28 @@
 \begin{itemize}
     \item Relevant coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
+\vspace{0.5mm}
 
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
 \begin{itemize}
-    \item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
+    \item Recipient of Full Tuition for Excellence Scholarship
 \end{itemize}
+\vspace{0.5mm}
 
 \textbf{University of Michigan College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
 \textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
 
-\vspace{1mm}
+\vspace{0.5mm}
 %==== Certificates ====%
-\header{Certifications} \\
+\header{Certifications and Exams} \\
 \begin{itemize}
     \item \textbf{Specialization} (5 courses) - Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
     \item \textbf{Specialization} (4 courses) - Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill \emph{Jul 2023}
+    \item Passed SOA Exam P \hfill \emph{May 2023}
     \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
 \end{itemize}
-\vspace{1mm}
+\vspace{0.5mm}
 %==== Professional and Academic Development ====%
 \header{Professional and Academic Development} \\
 
@@ -182,12 +185,12 @@ European Journalism Institute Program \hfill Prague, Czech Republic |  \emph{Jul
 
 Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill Online |  \emph{Jan 2016 --- May 2017}
 
-\vspace{1mm}
+\vspace{0.5mm}
 %==== Skills ====%
 \header{Skills} \\
-Technical languages: Python (regex, numpy, pandas, scikit-learn, matplotlib, nltk, networkx), R (dplyr, tidyr, stringr, ggplot2), HTML5, CSS, \LaTeX, SQL \\
+Technical: Python (regex, numpy, pandas, scikit-learn, matplotlib, nltk, networkx), R (dplyr, tidyr, stringr, ggplot2), HTML5, CSS, \LaTeX, SQL \\
 
-Statistical techniques: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit \\
+Statistical: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit \\
 
 ML models: Gradient descent, random forest, decision tree, SVC, linear, lasso, KNN, na\"{i}ve Bayes, clustering
 
