--- a/cv/LimDon_resumeCV - Copy.tex
+++ b/cv/LimDon_resumeCV - Copy.tex
@@ -15,13 +15,11 @@
 }
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[margin=0.9in]{geometry}
+\usepackage[margin=0.8in]{geometry}
 \textheight=10in
 \pagestyle{empty}
 \raggedright
 \usepackage{inconsolata}
-
-
 
 \usepackage{marvosym}
 \usepackage{fontawesome}
@@ -88,30 +86,26 @@
 \vspace*{-40pt}
 \fontsize{10.5}{12}\selectfont
 
-
 %==== Profile ====%
-\vspace*{1mm}
+\vspace*{-3mm}
 \begin{center}
-    {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{1mm}
-    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\Big|$  \Mobilefone\space (806) 317-7937 $\Big|$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} \\
+    {\Huge\textbf\textsc{{{Don Lim}}}}\\
+    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} | \Mobilefone\space (806) 317-7937 | \href{https://donlim93.github.io/}{\twemoji{globe with meridians}\space donlim93.github.io} \\
 \end{center}
 %==== Experience ====%
-\vspace*{-2mm}
+\vspace*{-1mm}
 \header{Work and Research Experience} \\
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Sales and Marketing Analyst} \hfill  \emph{May 2023 --- Present} \\
 \begin{itemize}
-    \item Assisting in implementing Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) \item Querying relational databases to validate and clean for migration into Salesforce (SQL, Python)
+    \item Assisting in implementing Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud); querying existing data to validate and clean for migration into Salesforce (SQL, Python)
 \end{itemize}
 \vspace{0.5mm}
 
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
-    \item Troubleshooted automated workflows and forms processes
-    \item Maintained non-clustered SQL databases
-    \item Administered folder-, document-, and user-level security
-    \item Served as internal IT support
+    \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; administering folder-, document-, and user-level security; internal IT support
 \end{itemize}    
 \vspace{0.5mm}
 
@@ -136,18 +130,14 @@
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
 \begin{itemize}
-    \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
-    \item Wrote and edited two publications per week related to the Pennsylvania's budget and education policy
-    \item Responded to daily email inquiries related to subsidies, right-to-work laws, and the state budget
+    \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies; wrote and edited two publications per week related to the Pennsylvania's budget and education policy; responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 \vspace{0.5mm}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
 \begin{itemize}
-    \item Collected and analyzed TIMSS and PISA datasets related to national education policy
-    \item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education
-    \item Produced over 200 social media posts on HumanProgress.org
+    \item Collected and analyzed TIMSS and PISA datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education; produced over 200 social media posts 
 \end{itemize}
 \vspace{0.5mm}
 
@@ -174,13 +164,28 @@
 %==== Certificates ====%
 \header{Certifications and Exams} \\
 \begin{itemize}
-    \item Specialization (5 courses) - \textbf{Applied Data Science with Python} (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
-    \item Specialization (4 courses) - \textbf{Django for Everybody} (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill \emph{Jul 2023}
+    \item \textbf{Specialization} (5 courses) - Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
+    \item \textbf{Specialization} (4 courses) - Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) \hfill \emph{Jul 2023}
     \item Passed SOA Exam P \hfill \emph{May 2023}
     \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
 \end{itemize}
 \vspace{0.5mm}
+%==== Professional and Academic Development ====%
+\header{Professional and Academic Development} \\
 
+NOUS Young Affiliates Program \hfill Online |  \emph{Oct 2020 --- May 2022} \\
+
+State Policy Network Generation Liberty Fellow \hfill Colorado Springs, CO |  \emph{Oct 2019} \\
+
+Epistemological and Methodological Approaches in Science \hfill Tallahassee, FL |  \emph{Aug 2018} \\
+
+Friedrich-Naumann-Stiftung f\"{u}r die Freiheit Seminar \hfill Gummersbach, Germany |  \emph{Jul 2018} \\
+
+European Journalism Institute Program \hfill Prague, Czech Republic |  \emph{Jul 2018} \\
+
+Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill Online |  \emph{Jan 2016 --- May 2017}
+
+\vspace{0.5mm}
 %==== Skills ====%
 \header{Skills} \\
 Technical: Python (regex, numpy, pandas, scikit-learn, matplotlib, nltk, networkx), R (dplyr, tidyr, stringr, ggplot2), HTML5, CSS, \LaTeX, SQL \\
