--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -93,7 +93,7 @@
 \vspace*{1mm}
 \begin{center}
     {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{1mm}
-    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\Big|$  \Mobilefone\space (806) 317-7937 $\Big|$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} \\
+    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\Big|$  \Mobilefone\space (806) 317-7937 $\Big|$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} $\Big|$ Frisco, Texas \\
 \end{center}
 %==== Experience ====%
 \vspace*{-2mm}
@@ -103,7 +103,7 @@
 \begin{itemize}
     \item Assisting in implementing Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) \item Querying relational databases to validate and clean for migration into Salesforce (SQL, Python)
 \end{itemize}
-\vspace{0.5mm}
+\vspace{1mm}
 
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
@@ -113,25 +113,25 @@
     \item Administered folder-, document-, and user-level security
     \item Served as internal IT support
 \end{itemize}    
-\vspace{0.5mm}
+\vspace{1mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Economic Research Assistant} \hfill  \emph{Aug 2020 --- May 2022} \\
 \begin{itemize}
     \item Edited and revised book chapters and journal articles; compiled relevant literature for journal articles
 \end{itemize}
-\vspace{0.5mm}
+\vspace{1mm}
 
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
 \textit{E.C. Harwood Visiting Research Fellow} \hfill  \emph{Dec 2018 --- May 2019}\\
-\vspace{0.5mm}
+\vspace{1mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill  \emph{Sep 2018 --- Dec 2018}\\
 \begin{itemize}
     \item Researched master's thesis: economic analysis of open-source communities
 \end{itemize}
-\vspace{0.5mm}
+\vspace{1mm}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
@@ -140,7 +140,7 @@
     \item Wrote and edited two publications per week related to the Pennsylvania's budget and education policy
     \item Responded to daily email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
-\vspace{0.5mm}
+\vspace{1mm}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
@@ -149,7 +149,7 @@
     \item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education
     \item Produced over 200 social media posts on HumanProgress.org
 \end{itemize}
-\vspace{0.5mm}
+\vspace{1mm}
 
 %==== Education ====%
 \header{Education} \\
@@ -158,19 +158,19 @@
 \begin{itemize}
     \item Relevant coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
-\vspace{0.5mm}
+\vspace{1mm}
 
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
 \begin{itemize}
     \item Recipient of Full Tuition for Excellence Scholarship
 \end{itemize}
-\vspace{0.5mm}
+\vspace{1mm}
 
 \textbf{University of Michigan College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
 \textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
 
-\vspace{0.5mm}
+\vspace{1mm}
 %==== Certificates ====%
 \header{Certifications and Exams} \\
 \begin{itemize}
@@ -179,7 +179,7 @@
     \item Passed SOA Exam P \hfill \emph{May 2023}
     \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
 \end{itemize}
-\vspace{0.5mm}
+\vspace{1mm}
 
 %==== Skills ====%
 \header{Skills} \\
